# cuda_opencv

01/: CMakeLists.txt
01/src/: 01_add.cu  02_add_array.cu  03_square.cu  04_large_thread.cu
02/: CMakeLists.txt
02/src/: 01_add_img.cpp
